--- a/.config/i3/config
+++ b/.config/i3/config
@@ -19,7 +19,7 @@ font pango: Noto Sans 11
 # autostart
 exec --no-startup-id feh --bg-scale ~/Pictures/wall.png
 exec --no-startup-id flameshot
-exec --no-startup-id goldendict
+# exec --no-startup-id goldendict
 # exec --no-startup-id compton -b
 # exec --no-startup-id dunst
 exec --no-startup-id keynav
@@ -234,4 +234,4 @@ bindsym $mod+m bar mode toggle
 new_window 1pixel
 
 # gaps
-gaps inner 4
+gaps inner 0
