--- a/.shellconfig
+++ b/.shellconfig
@@ -65,11 +65,8 @@ alias alert='notify-send --urgency=low -i "$([ $? = 0 ] && echo terminal || echo
 alias gg='goldendict'
 alias vd='vimdiff'
 alias alacritty-colorscheme='alacritty-colorscheme -C ~/.alacritty-themes'
-# quickly go to workspace
+# quickly go to folder
 alias tmp='cd ~/tmp'
-alias work="cd ~/workspace"
-alias leet="cd ~/.leetcode"
-alias note="cd ~/note"
 
 
 
